// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReclaimPaymentConfirmationScreen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Light",
                    "fontSize": 22,
                    "paddingBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#2E3338",
                    "padding": 10,
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              reclaimPayment
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 4,
              "marginHorizontal": 20,
              "marginVertical": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#EEEEEE",
                  "borderRadius": 3,
                  "borderWidth": 1,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "padding": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "margin": "auto",
                  "marginVertical": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/images/coins-logo.png",
                  }
                }
                style={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 25,
                  "marginTop": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "fontSize": 34,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                +
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 24,
                      "textAlignVertical": "top",
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                10.00
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                John Doe
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Light",
                        "fontSize": 14,
                        "textAlignVertical": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#EEEEEE",
                        "borderRadius": 3,
                        "justifyContent": "center",
                        "marginRight": 5,
                        "paddingLeft": 6,
                        "paddingRight": 3,
                      },
                    ]
                  }
                >
                  🇺🇸 +1
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Light",
                      "fontSize": 14,
                      "textAlignVertical": "center",
                    }
                  }
                >
                  (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "stretch",
                  "justifyContent": "center",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalSent
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    securityFee
                  </Text>
                  <View
                    accessible={true}
                    hitSlop={
                      Object {
                        "bottom": 10,
                        "left": 10,
                        "right": 10,
                        "top": 10,
                      }
                    }
                    isTVSelectable={true}
                    nativeBackgroundAndroid={
                      Object {
                        "attribute": "selectableItemBackgroundBorderless",
                        "type": "ThemeAttrAndroid",
                      }
                    }
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "justifyContent": "flex-end",
                        "paddingHorizontal": 5,
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/images/info.png",
                        }
                      }
                      style={
                        Object {
                          "height": 12,
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 0.7,
                        },
                      ],
                    }
                  }
                >
                  <ActivityIndicator
                    animating={true}
                    color="#42D689"
                    hidesWhenStopped={true}
                    size="small"
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalRefunded
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10.00
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            Object {
              "marginVertical": 10,
            },
            Object {
              "marginBottom": 10,
            },
            undefined,
            Object {
              "backgroundColor": "#A3EBC6",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#A3EBC6",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderColor": "#A3EBC6",
                "borderRadius": 3,
                "borderWidth": 2,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            null,
            null,
            Object {
              "marginBottom": 10,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderWidth": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#42D689",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ReclaimPaymentConfirmationScreen renders correctly when fee calculation fails 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Light",
                    "fontSize": 22,
                    "paddingBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#2E3338",
                    "padding": 10,
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              reclaimPayment
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 4,
              "marginHorizontal": 20,
              "marginVertical": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#EEEEEE",
                  "borderRadius": 3,
                  "borderWidth": 1,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "padding": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "margin": "auto",
                  "marginVertical": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/images/coins-logo.png",
                  }
                }
                style={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 25,
                  "marginTop": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "fontSize": 34,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                +
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 24,
                      "textAlignVertical": "top",
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                10.00
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                John Doe
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Light",
                        "fontSize": 14,
                        "textAlignVertical": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#EEEEEE",
                        "borderRadius": 3,
                        "justifyContent": "center",
                        "marginRight": 5,
                        "paddingLeft": 6,
                        "paddingRight": 3,
                      },
                    ]
                  }
                >
                  🇺🇸 +1
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Light",
                      "fontSize": 14,
                      "textAlignVertical": "center",
                    }
                  }
                >
                  (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "stretch",
                  "justifyContent": "center",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalSent
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    securityFee
                  </Text>
                  <View
                    accessible={true}
                    hitSlop={
                      Object {
                        "bottom": 10,
                        "left": 10,
                        "right": 10,
                        "top": 10,
                      }
                    }
                    isTVSelectable={true}
                    nativeBackgroundAndroid={
                      Object {
                        "attribute": "selectableItemBackgroundBorderless",
                        "type": "ThemeAttrAndroid",
                      }
                    }
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "justifyContent": "flex-end",
                        "paddingHorizontal": 5,
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/images/info.png",
                        }
                      }
                      style={
                        Object {
                          "height": 12,
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 0.7,
                        },
                      ],
                    }
                  }
                >
                  <ActivityIndicator
                    animating={true}
                    color="#42D689"
                    hidesWhenStopped={true}
                    size="small"
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalRefunded
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10.00
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            Object {
              "marginVertical": 10,
            },
            Object {
              "marginBottom": 10,
            },
            undefined,
            Object {
              "backgroundColor": "#A3EBC6",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#A3EBC6",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderColor": "#A3EBC6",
                "borderRadius": 3,
                "borderWidth": 2,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            null,
            null,
            Object {
              "marginBottom": 10,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderWidth": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#42D689",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ReclaimPaymentConfirmationScreen renders correctly when fee calculation fails 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Light",
                    "fontSize": 22,
                    "paddingBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#2E3338",
                    "padding": 10,
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              reclaimPayment
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 4,
              "marginHorizontal": 20,
              "marginVertical": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#EEEEEE",
                  "borderRadius": 3,
                  "borderWidth": 1,
                },
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "padding": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "margin": "auto",
                  "marginVertical": 10,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/images/coins-logo.png",
                  }
                }
                style={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 25,
                  "marginTop": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "fontSize": 34,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                +
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 24,
                      "textAlignVertical": "top",
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                    Object {
                      "color": "#42D689",
                    },
                  ]
                }
              >
                10.00
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "padding": 20,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                John Doe
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Light",
                        "fontSize": 14,
                        "textAlignVertical": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#EEEEEE",
                        "borderRadius": 3,
                        "justifyContent": "center",
                        "marginRight": 5,
                        "paddingLeft": 6,
                        "paddingRight": 3,
                      },
                    ]
                  }
                >
                  🇺🇸 +1
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Light",
                      "fontSize": 14,
                      "textAlignVertical": "center",
                    }
                  }
                >
                  (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "stretch",
                  "justifyContent": "center",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalSent
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    securityFee
                  </Text>
                  <View
                    accessible={true}
                    hitSlop={
                      Object {
                        "bottom": 10,
                        "left": 10,
                        "right": 10,
                        "top": 10,
                      }
                    }
                    isTVSelectable={true}
                    nativeBackgroundAndroid={
                      Object {
                        "attribute": "selectableItemBackgroundBorderless",
                        "type": "ThemeAttrAndroid",
                      }
                    }
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "justifyContent": "flex-end",
                        "paddingHorizontal": 5,
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/images/info.png",
                        }
                      }
                      style={
                        Object {
                          "height": 12,
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  ---
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    totalRefunded
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  10.00
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            Object {
              "marginVertical": 10,
            },
            Object {
              "marginBottom": 10,
            },
            undefined,
            Object {
              "backgroundColor": "#A3EBC6",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#A3EBC6",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderColor": "#A3EBC6",
                "borderRadius": 3,
                "borderWidth": 2,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            null,
            null,
            Object {
              "marginBottom": 10,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 50,
              },
              Object {
                "borderWidth": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#42D689",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
